src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Industry_Sector__c</fullName>
        <description>This is a Dependant Picklist an is Dependant on Industry</description>
        <inlineHelpText>The values available for selection in this Picklist are Dependant on the values selected in the Industry Picklist</inlineHelpText>
        <label>Industry Sector</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>01: Crop and animal production, hunting and related service activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02: Forestry and logging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03: Fishing and aquaculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05: Mining of coal and lignite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06: Extraction of crude petroleum and natural gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07: Mining of metal ores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08: Other mining and quarrying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09: Mining support service activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10: Manufacture of food products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11: Manufacture of beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12: Manufacture of tobacco products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13: Manufacture of textiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14: Manufacture of wearing apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15: Manufacture of leather and related products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16: Manufacture of wood and of products of wood and cork, except furniture; manufacture of articles of straw and plaiting materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17: Manufacture of paper and paper products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18: Printing and reproduction of recorded media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19: Manufacture of coke and refined petroleum products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20: Manufacture of chemicals and chemical products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21: Manufacture of basic pharmaceutical products and pharmaceutical preparations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22: Manufacture of rubber and plastic products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23: Manufacture of other non-metallic mineral products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24: Manufacture of basic metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25: Manufacture of fabricated metal products, except machinery and equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26: Manufacture of computer, electronic and optical products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27: Manufacture of electrical equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28: Manufacture of machinery and equipment n.e.c.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29: Manufacture of motor vehicles, trailers and semi-trailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30: Manufacture of other transport equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31: Manufacture of furniture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Opportunity_Close_Date__c</fullName>
        <label>Last Opportunity Close Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_RQA_Centre_Visit__c</fullName>
        <description>Last RQA Centre Visit</description>
        <inlineHelpText>Last RQA Centre Visit</inlineHelpText>
        <label>Last RQA Centre Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_TouchPoint__c</fullName>
        <description>Populated by Touchpoint button on account</description>
        <inlineHelpText>Records the last time the customer was contacted. Auto populated by Touchpoint button on Account</inlineHelpText>
        <label>Last TouchPoint</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>12</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <inlineHelpText>Please select where the company had heard of us.</inlineHelpText>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>BSC Event or Seminar</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Exhibition or Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine, Newspaper or Printed Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV / Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_Reference__c</fullName>
        <description>Each account has a Account Reference formula field which concatenates first 3 letters of the account name and Account Reference Creator.  If the account has a reference from a legacy system insert it here to overwrite the Account reference with is value</description>
        <label>Legacy Account Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_duplicate_record__c</fullName>
        <inlineHelpText>Please copy UIRL of duplicate record</inlineHelpText>
        <label>Link to duplicate record</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>Denotes Type of Location</description>
        <inlineHelpText>Denotes Type of Location</inlineHelpText>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether the Account should NOT be Emailed</description>
        <inlineHelpText>If this checkbox is True, DO NOT Email this Account.</inlineHelpText>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Sector_Description__c</fullName>
        <description>Market Sector Description</description>
        <inlineHelpText>Market Sector Description</inlineHelpText>
        <label>Market Sector Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Master_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please indicate which record should be the master.</inlineHelpText>
        <label>Master Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick if the Account is a current member.</description>
        <inlineHelpText>Tick if the Account is a current member.</inlineHelpText>
        <label>Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mod_Turnover__c</fullName>
        <label>Mod Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>National_Employee_Band__c</fullName>
        <description>National Employee Band</description>
        <inlineHelpText>National Employee Band</inlineHelpText>
        <label>National Employee Band</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_TouchPoint__c</fullName>
        <description>Populated by Touchpoint button on account</description>
        <inlineHelpText>Records the next time the customer was contacted. Auto populated by Touchpoint button on Account</inlineHelpText>
        <label>Next TouchPoint</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Of_Sites__c</fullName>
        <label>Number Of Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Subsidaries__c</fullName>
        <label>Number Of Subsidaries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORG_USERINT_5__c</fullName>
        <description>Stores the value of org_userint_5 from course booker where the organisation has been added before 31st Dec 2006 and has not been contacted after Jan 1 2007.</description>
        <label>ORG_USERINT_5</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORG_USERINT_6__c</fullName>
        <description>Stores the value of org_userint_6 from course booker which indicates where the purchased licence organisation information has &apos;expired&apos; and BSC have no right to contact them.</description>
        <label>Unlicensed Organisations</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldIndustrySector__c</fullName>
        <description>Holds old Industry Sector data before update</description>
        <label>OldIndustrySector</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OldIndustry__c</fullName>
        <description>Temp filed to hold old industry information prior to clean Aug 2015</description>
        <label>OldIndustry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_Opportunities__c</fullName>
        <description>Count of Open Opportunities attached to this account</description>
        <inlineHelpText>Count of Open Opportunities attached to this account</inlineHelpText>
        <label>Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>FALSE</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Centre_Approval_Date__c</fullName>
        <description>Original Centre Approval Date</description>
        <inlineHelpText>Original Centre Approval Date</inlineHelpText>
        <label>Original Centre Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAYCP1__Country_Code__c</fullName>
        <formula>CASE(BillingCountry,
&quot;USA&quot;, &quot;US&quot;,
&quot;Canada&quot;, &quot;CA&quot;,
&quot;France&quot;, &quot;FR&quot;,
&quot;UK&quot;, &quot;GB&quot;,
&quot;Australia&quot;, &quot;AU&quot;,
&quot;Spain&quot;, &quot;ES&quot;,
&quot;Portugal&quot;, &quot;PT&quot;,
&quot;Italy&quot;, &quot;IT&quot;,
&quot;Germany&quot;, &quot;DE&quot;,
&quot;Sweden&quot;, &quot;SE&quot;,
&quot;Norway&quot;, &quot;NO&quot;,
&quot;Austria&quot;, &quot;AT&quot;,
&quot;Belgium&quot;,&quot;BE&quot;,
&quot;Denmark&quot;,&quot;DK&quot;,
&quot;Finland&quot;,&quot;FI&quot;,
&quot;Greece&quot;,&quot;GR&quot;,
&quot;Ireland&quot;,&quot;IE&quot;,
&quot;Netherlands&quot;,&quot;NL&quot;,
&quot;New Zealand&quot;,&quot;NZ&quot;,
&quot;Norway&quot;,&quot;NO&quot;,
&quot;Poland&quot;,&quot;PO&quot;,
&quot;Switzerland&quot;,&quot;CH&quot;,
&quot;England:Wales:Scotland:United Kingdom&quot;,&quot;GB&quot;,
&quot;GB&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PK_CB_ORG_ID__c</fullName>
        <description>This is a the Primaty Key of the Organisation from the source Organisation data and maps to Organisation.ORG_ID from the Organisation table in the CB database. 

The primary key of the record managed by Salesforce will be Account.Id and is generated during record creation</description>
        <externalId>true</externalId>
        <inlineHelpText>System Administrator field used for Data Migration only</inlineHelpText>
        <label>PK_CB_ORG_ID</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PO_Number_always_required_on_orders__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked opportunities cannot go to &apos;Customer Approved&apos; without a purchase order being entered.</inlineHelpText>
        <label>PO Number always required on orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricebook2__c</fullName>
        <description>Defines pricebook based on membership status and principle address country</description>
        <formula>IF(
AND(
Member__c =TRUE, ISPICKVAL( Principle_Address_Country__c ,&quot;United Kingdom&quot;)
),&quot;01s200000006LWQAA2&quot;,
(
IF(
AND(
Member__c =FALSE, ISPICKVAL( Principle_Address_Country__c ,&quot;United Kingdom&quot;)
),&quot;01s200000006LytAAE&quot;,

IF(
AND(
Member__c =TRUE, NOT(ISPICKVAL( Principle_Address_Country__c ,&quot;United Kingdom&quot;))
),&quot;01s200000006LyoAAE&quot;,


IF(
AND(
Member__c =FALSE, NOT(ISPICKVAL( Principle_Address_Country__c ,&quot;United Kingdom&quot;))
),&quot;01s200000006LyyAAE&quot;,

null
)))))</formula>
        <label>Pricebook2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <description>Pricebook to be used for auto-generated subscription renewals</description>
        <inlineHelpText>Subscription Renewal Pricebook (set by workflow)</inlineHelpText>
        <label>Pricebook</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_Address_Area__c</fullName>
        <label>Principle Address: Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_Address_Building__c</fullName>
        <label>Principle Address: Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_Address_City__c</fullName>
        <label>Principle Address: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_Address_Country__c</fullName>
        <label>Principle Address: Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Principle_Address_Global_Region__c</fullName>
        <description>Region in which the Principle Address is situated</description>
        <inlineHelpText>Populates automatically</inlineHelpText>
        <label>Principle Address: Global Region</label>
        <picklist>
            <controllingField>Principle_Address_Country__c</controllingField>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oceania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Principle_Address_Postal_Code_no_spaces__c</fullName>
        <description>Removes spaces from postcodes</description>
        <formula>SUBSTITUTE(Principle_Address_ZIP_Postal_Code__c, &apos; &apos;, &apos;&apos;)</formula>
        <label>Principle Address Postal Code no spaces</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_Address_Postcode_Area_UK__c</fullName>
        <formula>IF(
	NOT(ISPICKVAL(Principle_Address_Country__c ,&quot;United Kingdom&quot;)),
	&quot;International&quot;,
	IF(
		LEFT (Principle_Address_ZIP_Postal_Code__c,4)=&quot;BFPO&quot;,
		&quot;BFPO&quot;,
		IF(
			CONTAINS(&quot;1:2:3:4:5:6:7:8:9:0&quot; ,RIGHT(LEFT(Principle_Address_ZIP_Postal_Code__c,2),1)),
			LEFT(Principle_Address_ZIP_Postal_Code__c,1),
			LEFT(Principle_Address_ZIP_Postal_Code__c,2)
)))</formula>
        <label>Principle Address: Postcode Area (UK)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_Address_Region_UK__c</fullName>
        <formula>IF(
	NOT(ISPICKVAL(Principle_Address_Country__c ,&quot;United Kingdom&quot;)),
	&quot;International&quot;,
	
	IF(ISBLANK(Principle_Address_ZIP_Postal_Code__c), &quot;Unknown&quot;,
	IF(CONTAINS(&quot;BFPO&quot;,left(Principle_Address_ZIP_Postal_Code__c,4)), &quot;BFPO&quot;,
	IF(CONTAINS(&quot;CB:CO:DE:DN:IP:LE:LN:NG:NR:PE:S0:S1:S2:S3:S4:S5:S6:S7:S8:S9&quot;, left(Principle_Address_ZIP_Postal_Code__c,2)), &quot;East Midlands&quot;,
	IF(CONTAINS(&quot;BR:CR:DA:E0:E1:E2:E3:E4:E5:E6:E7:E8:E9:EC:EN:HA:IG:KT:N0:N1:N2:N3:N4:N5:N6:N7:N8:N9:NW:RM:SE:SM:SW:TW:UB:W0:W1:W2:W3:W4:W5:W6:W7:W8:W9:WC:WD&quot;, left(Principle_Address_ZIP_Postal_Code__c,2)), &quot;Greater London&quot;,
	IF(CONTAINS(&quot;DL:DH:HG:HU:LS:NE:SR:TS:WF:YO&quot;,left(Principle_Address_ZIP_Postal_Code__c,2)), &quot;North East&quot;,
	IF(CONTAINS(&quot;BB:BD:BL:CA:CH:CW:FY:HD:HX:IM:L1:L2:L3:L4:L5:L6:L7:L8:L9:L0:LA:M1:M2:M3:M4:M5:M6:M7:M8:M9:M0:OL:PR:SK:WA:WN&quot;,left(Principle_Address_ZIP_Postal_Code__c,2)), &quot;North West&quot;,
	IF(CONTAINS(&quot;BT&quot;,left(Principle_Address_ZIP_Postal_Code__c,2)), &quot;Northern Ireland&quot;,
	IF(CONTAINS(&quot;AB:DD:DG:EH:FK:G1:G2:G3:G4:G5:G6:G7:G8:G9:G0:HS:IV:KA:KW:KY:ML:PA:PH:TD:ZE&quot;,left(Principle_Address_ZIP_Postal_Code__c,2)), &quot;Scotland&quot;,
	IF(CONTAINS(&quot;AL:BN:CM:CT:GU:GY:HP:JE:LU:ME:MK:OX:PO:RG:RH:SG:SL:SO:SS:TN&quot;,left(Principle_Address_ZIP_Postal_Code__c,2)), &quot;South East&quot;,
	IF(CONTAINS(&quot;BA:BH:BS:DT:EX:GL:GY:PL:SN:SP:TA:TQ:TR&quot;,left(Principle_Address_ZIP_Postal_Code__c,2)), &quot;South West&quot;,
	IF(CONTAINS(&quot;CF:LD:LL:NP:SA:SY&quot;,left(Principle_Address_ZIP_Postal_Code__c,2)), &quot;Wales&quot;,
	IF(CONTAINS(&quot;B1:B2:B3:B4:B5:B6:B7:B8:B9:B0:CV:DY:HR:NN:ST:TF:WR:WS:WV&quot;,left(Principle_Address_ZIP_Postal_Code__c,2)), &quot;West Midlands&quot;,
&quot;Other&quot;)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically populated based on the Postcode</inlineHelpText>
        <label>Principle Address: Region (UK)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_Address_State_Province__c</fullName>
        <label>Principle Address: State / Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_Address_Street__c</fullName>
        <label>Principle Address: Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Principle_Address_ZIP_Postal_Code__c</fullName>
        <label>Principle Address: ZIP / Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_and_Billing_Address_Compared__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flag to say that the billing address and principle address have been compared and that they have been made the same etc..</inlineHelpText>
        <label>Principle and Billing Address Compared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profiles__c</fullName>
        <label>Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>Profile 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Public_Liability_Insurance_Exp_Date__c</fullName>
        <inlineHelpText>Supplier&apos;s Public Liability Insurance Expiry Date (entered by the Standards Manager).</inlineHelpText>
        <label>Public Liability Insurance Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCP_Center_agreement_signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks whether an account has signed an RCP center agreement - not specific for individual products</description>
        <inlineHelpText>Tick this box if this account has signed a RCP center agreement</inlineHelpText>
        <label>RCP Center agreement signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RQA_Contact_Email__c</fullName>
        <description>Email of RQA Contact derived from associated RQA Contact</description>
        <formula>RQA_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Email of RQA Contact, auto populated from associated RQA contact record</inlineHelpText>
        <label>RQA Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RQA_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Regional Quality Assurance Contact</description>
        <inlineHelpText>Regional Quality Assurance Contact associated to the qualification Center</inlineHelpText>
        <label>RQA Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (RQA Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Trader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requires_IDG_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When data is matched and appended by IDG API&apos;s and multiple matches are found, this box is ticked.  This informs Marketing that this record should be manually checked using the IDG Prove application</description>
        <inlineHelpText>Denotes multiple matches found by IDG, this record should be manually checked and updated where necessary</inlineHelpText>
        <label>Requires IDG Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <description>This stores a description relating to the SIC Code for each Account. This field is hidden from all users other than System Administrators. It is not managed through the front end but though Data migration.</description>
        <label>SIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Division__c</fullName>
        <description>SIC Division (2007)</description>
        <inlineHelpText>SIC Division (2007)</inlineHelpText>
        <label>Division</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Section__c</fullName>
        <description>SIC Section Information (2007)</description>
        <inlineHelpText>SIC Section Information (2007)</inlineHelpText>
        <label>Section</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Indicator__c</fullName>
        <formula>IMAGE(CASE( Satisfaction_Level__c,&quot;Very Satisfied&quot;, &quot;/img/samples/stars_500.gif&quot;, &quot;Satisfied&quot;, &quot;/img/samples/stars_300.gif&quot;, &quot;Not Very Satisfied&quot;, &quot;/img/samples/stars_100.gif&quot;,&quot;/img/samples/stars_100.gif&quot;),&quot;No Satisfaction Level&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Custom Formula Field based on satisfaction level</inlineHelpText>
        <label>Satisfaction Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Level__c</fullName>
        <inlineHelpText>Custom field to segment accounts by satisfaction level</inlineHelpText>
        <label>Satisfaction Level</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Very Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Statements__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send eMail Customer Statments to the Account Contact</description>
        <inlineHelpText>Send eMail Customer Statments to the Account Contact</inlineHelpText>
        <label>Send Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sends_Statements_By__c</fullName>
        <description>Statements are sent by email if the finance contact is defined and has an email address or printed if not.  This is used in the print statements view and statement definitions for mass email</description>
        <formula>IF
  (ISBLANK(c2g__CODAFinanceContact__r.Email),
   &apos;Print&apos;,
    &apos;Email&apos;)</formula>
        <inlineHelpText>Automatically set to email if finance contact has an email address otherwise sets to print.</inlineHelpText>
        <label>Sends Statements By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Stores data from ORG_SOURCE in CB database</description>
        <label>Source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>